<resources>
    <string name="app_name">Trabalho_Commov</string>
    <string name="Description">Description</string>
    <string name="Title">Title</string>
    <string name="Insert_Item">Insert Item</string>
    <string name="Remove_Item">Remove Item</string>
    <string name="add_city">Add</string>
    <string name="insertcity">Insert City</string>
    <string name="insertcountry">Insert Country</string>
    <string name="empty_not_saved">NOT SAVED</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="mynotes">My Notes</string>
    <string name="All_Notes">All Notes</string>
    <string name="inserttitulo">Title</string>
    <string name="insertDescrição">Description</string>
    <string name="add_nota">Add nota</string>
    <string name="missingdata">Make sure you fill all required fields</string>
    <string name="passworderrada">Wrong Password</string>
    <string name="SIGNOUT">Signout</string>
    <string name="title_activity_maps">Map</string>
    <string name="DescriptionSlash">"Description: "</string>
    <string name="TitleSlash">"Title: "</string>
    <string name="usererradp">The user does not exist</string>
    <string name="credenciais">Login Failed : Incorrect credentials</string>

    <string name="Acidente">Acident</string>
    <string name="Obras">Construction</string>
    <string name="Estrada">Road Damage</string>
    <string name="Perigo">Danger</string>
    <string name="selected_item">Selected item</string>
    <string name="Preencher">Please fill out all the forms</string>
    <string name="inserido">New note successfully inserted</string>
    <string name="erroinsert">Error: Insertion failed</string>
    <string name="inserttipo">Tipe</string>
    <string name="delete">Delete Note</string>
    <string name="editnote">Edit Note</string>
    <string name="retur">Return</string>
    <string name="deletenote">Note deleted successfully</string>
    <string name="exists">Note does not exist</string>
    <string name="cantdelete">You are not allowed to delete this note</string>
    <string name="cantedit">You do not have permission to edit this note</string>
    <string name="alterado">Note altered successfuly</string>
    <string name="erroEditar">There was an error while editing the note</string>
    <string name="Filter">Filter</string>
    <string name="Filtersize">Filter distance</string>
    <string name="Distancia">Distance</string>
    <string name="Filters">Filters</string>

    <string-array name="planets_array">
        <item>@string/Acidente</item>
        <item>@string/Obras</item>
        <item>@string/Estrada</item>
        <item>@string/Perigo</item>

    </string-array>
</resources>