<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ipvc.estg.room.Main_Menu">

<LinearLayout
    android:id="@+id/loginlayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/username"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentTop="true"/>

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/password"
        android:layout_marginLeft="10dp"
        android:layout_alignBottom="@id/editTextTextPersonName"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="30dp"

        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:text="@string/login"
        android:textColor="#3FEA0E"
        app:backgroundTint="#FFFFFF" />

</LinearLayout>

    <View
        android:id="@+id/barrier1"
        android:layout_alignBottom="@id/loginlayout"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add_city"
        android:src="@drawable/ic_baseline_close_24"
        android:tint="#F30000"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="#E60909" />


    <LinearLayout
        android:id="@+id/buttonslayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/All_Notes"
            android:layout_weight="1"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:textColor="#000000"
            app:backgroundTint="#FFFFFF"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:text="@string/mynotes"
            android:textColor="#000000"
            app:backgroundTint="#FFFFFF" />

    </LinearLayout>



    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/barrier2"
        android:layout_below="@+id/barrier1"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <View
        android:id="@+id/barrier2"
        android:layout_above="@id/buttonslayout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/darker_gray"/>

</RelativeLayout>