<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">





    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <EditText
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:hint="@string/inserttitulo"
            android:inputType="textAutoComplete"
            android:textSize="18sp" />


        <View
            android:id="@+id/barrier2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/darker_gray"/>




        <EditText
            android:id="@+id/descicao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:hint="@string/insertDescrição"
            android:inputType="textAutoComplete"
            android:textSize="18sp" />
        <View
            android:id="@+id/barrier3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"

            android:layout_marginBottom="10dp"
            android:background="@android:color/darker_gray"/>


        <EditText
            android:id="@+id/tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:hint="@string/inserttipo"
            android:inputType="textAutoComplete"
            android:textSize="18sp" />

        <View
            android:id="@+id/barrier4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/darker_gray"/>

    </LinearLayout>


    <Button
        android:id="@+id/button_save"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Save"
        />



</RelativeLayout>